<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.kusoroadeolu</groupId>
        <artifactId>clique</artifactId>
        <version>3.0.0</version>
    </parent>

    <groupId>io.github.kusoroadeolu</groupId>
    <artifactId>clique-core</artifactId>
    <version>3.0.0</version>

    <dependencies>
        <dependency>
            <groupId>io.github.kusoroadeolu</groupId>
            <artifactId>clique-spi</artifactId>
            <version>1.0.1</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <name>Clique</name>
    <description>A CLI library for beautifying Java terminal applications</description>
    <url>https://github.com/kusoroadeolu/Clique</url>
    <licenses>
        <license>
            <name>Apache 2.0 License</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>kusoroadeolu</id>
            <name>Kusoro Adeolu</name>
            <email>kusoradeolu@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/kusoroadeolu/Clique.git</connection>
        <developerConnection>scm:git:ssh://github.com:kusoroadeolu/Clique.git</developerConnection>
        <url>https://github.com/kusoroadeolu/Clique</url>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>io.github.kusoroadeolu.clique.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>